[package]
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
description = "Handy macro to generate C-FFI bindings to Rust for Haskell"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "hs-bindgen"
repository = "https://github.com/yvan-sraka/hs-bindgen"
rust-version = "1.64.0"
version = "0.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
hs-bindgen-attribute = { git = "https://github.com/herkhinah/hs-bindgen-attribute.git", branch = "shekhinah/FunPtr", default-features = false }
hs-bindgen-traits = { git = "https://github.com/herkhinah/hs-bindgen-traits.git", branch = "shekhinah/FunPtr", default-features = false }

[features]
default = ["std"]
full = ["antlion", "std"]
antlion = ["hs-bindgen-attribute/antlion"]
std = ["hs-bindgen-traits/std"]
